--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/kmfiguerrez/IPv6-Subnetting#readme",
   "devDependencies": {
+    "@types/bootstrap": "^5.2.6",
     "sass": "^1.57.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
