--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "private": true,
-  "main": "index.js",
+  "main": "main.ts",
   "scripts": {
-    "sass": "sass --watch ./src/sass:./src/dist/css"
+    "sass": "sass --watch ./src/sass:./src/dist/css",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,9 @@
   "devDependencies": {
     "@types/bootstrap": "^5.2.6",
     "sass": "^1.57.1",
+    "source-map-loader": "^4.0.1",
+    "ts-loader": "^9.4.2",
+    "typescript": "^4.9.4",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
   },
